--- a/landing/css/test.css
+++ b/landing/css/test.css
@@ -1,1 +1,58 @@
+* {
+    box-sizing: border-box;
+}
 
+.clearfix:after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+  padding: 5px 0;
+}
+
+.row:after {
+    display: block;
+    content: '';
+    clear: both;
+}
+
+.col-xs-3, .col-xs-4, .col-xs-12,
+.col-md-3, .col-md-9, .col-md-12 {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.col-xs-3 {
+    width: 25%;
+}
+.col-xs-9 {
+    width: 75%;
+}
+.col-xs-12 {
+    width: 100%;
+}
+.text-right {
+    text-align: right;
+}
+.lbl {
+    text-align: left;
+}
+
+@media (min-width: 500px) {
+    .col-md-3 {
+        width: 25%;
+    }
+    .col-md-9 {
+        width: 75%;
+    }
+    .col-md-12 {
+        width: 100%;
+    }
+    .lbl {
+        text-align: right;
+    }
+}
